--- a/views/rider/rideracct.handlebars
+++ b/views/rider/rideracct.handlebars
@@ -34,42 +34,42 @@
                                                     <div class="billing-info">
                                                         <label>First Name</label>
                                                         <input type="text" class="form-control" name="firstname"
-                                                        value="{{User.firstname}}" required>
+                                                            value="{{User.firstname}}" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="billing-info">
                                                         <label>Last Name</label>
-                                                        <input type="text" class="form-control" name="firstname"
-                                                        value="{{User.lastname}}" required>
+                                                        <input type="text" class="form-control" name="lastname"
+                                                            value="{{User.lastname}}" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="billing-info">
                                                         <label>Transport</label>
-                                                        <input type="text" class="form-control" name="firstname"
-                                                        value="{{User.transport}}" required>
+                                                        <input type="text" class="form-control" name="transport"
+                                                            value="{{User.transport}}" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="billing-info">
                                                         <label>license Number</label>
-                                                        <input type="text" class="form-control" name="firstname"
-                                                        value="{{User.licenseno}}" required>
+                                                        <input type="text" class="form-control" name="licenseno"
+                                                            value="{{User.licenseno}}" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="billing-info">
                                                         <label>Phone Number</label>
-                                                       <input type="text" class="form-control" name="firstname"
-                                                        value="{{User.phoneno}}" required>
+                                                        <input type="text" class="form-control" name="phoneno"
+                                                            value="{{User.phoneno}}" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6">
                                                     <div class="billing-info">
                                                         <label>Email</label>
-                                                        <input type="text" class="form-control" name="firstname"
-                                                        value="{{User.email}}" required>
+                                                        <input type="text" class="form-control" name="email"
+                                                            value="{{User.email}}" required>
                                                     </div>
                                                 </div>
                                             </div>
@@ -83,7 +83,8 @@
                                             </div>
                                         </div>
                                     </div>
-                            </div>
+                                </div>
+                            </form>
                         </div>
                         <div class="panel panel-default single-my-account">
                             <div class="panel-heading my-account-title">
