--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -73,7 +73,8 @@
     <script src="/js/ajax-mail.js"></script>
     <!-- Main JS -->
     <script src="/js/main.js"></script>
-
+    <!-- Notification Client JS -->
+    <script src="/js/notification.js"></script>
 </body>
 {{>_footer}}
 
