--- a/views/customer/viewshops.handlebars
+++ b/views/customer/viewshops.handlebars
@@ -30,7 +30,7 @@
                                     <div class="product-wrap mb-25 scroll-zoom">
                                         <div class="product-img">
                                             <a href="/viewshops/{{shopname}}">
-                                                <img class="default-img" src="/img/tailorstore_front/{{shopname}}.jpg" alt="">
+                                                <img class="default-img" src="/uploads/user/{{photo}}" alt="">
                                             </a>
                                             <span class="pink">-30%</span>
                                             <div class="product-action">
