--- a/views/tailor/tailoregister.handlebars
+++ b/views/tailor/tailoregister.handlebars
@@ -23,7 +23,7 @@
           <div id="lg2" class="tab-pane">
             <div class="login-form-container">
               <div class="login-register-form">
-                <form method="post" action="">
+                <form method="post" action="" enctype="multipart/form-data">
                   <div class="form-group">
                     <input type="text" name="username" placeholder="User Name" value="{{username }}">
                   </div>
@@ -35,6 +35,9 @@
                   </div>
                   <div class="form-group">
                     <input type="text" name="shopname" placeholder="Shop Name" value="{{shopname }}">
+                  </div>
+                  <div class="form-group">
+                    <input type="file" id="file" name="file">
                   </div>
                   <div class="form-group">
                     <input type="text" name="address1" placeholder="Address Line 1" value="{{address1 }}">
