profile photo upload

--- a/views/rider/rideregister.handlebars
+++ b/views/rider/rideregister.handlebars
@@ -23,7 +23,7 @@
           <div id="lg2" class="tab-pane">
             <div class="login-form-container">
               <div class="login-register-form">
-                <form method="post" action="">
+                <form method="post" action="" enctype="multipart/form-data">
                   <div class="row">
                     <div class="col-lg-6 col-md-6">
                       <div class="form-group">
@@ -38,6 +38,10 @@
                   </div>
                   <div class="form-group">
                     <input type="text" name="username" placeholder="User Name" value="{{ username }}">
+                  </div>
+                  <div class="form-group">
+                    Profile photo:
+                    <input type="file" id="file" name="file">
                   </div>
                   <div class="form-group">
                     <input type="text" name="password" placeholder="Password" value="{{ password }}">
