--- a/views/customer/custregister.handlebars
+++ b/views/customer/custregister.handlebars
@@ -23,7 +23,7 @@
           <div id="lg2" class="tab-pane">
             <div class="login-form-container">
               <div class="login-register-form">
-                <form method="post" action="">
+                <form method="post" action=""  enctype="multipart/form-data">
                   <div class="row">
                     <div class="col-lg-6 col-md-6">
                       <div class="form-group">
@@ -44,6 +44,10 @@
                   </div>
                   <div class="form-group">
                     <input type="text" name="password2" placeholder="Password" value="{{password2}}" required>
+                  </div>
+                  <div class="form-group">
+                    Profile photo:
+                    <input type="file" id="file" name="file">
                   </div>
                   <div class="form-group">
                     <input type="text" name="address1" placeholder="Address Line 1" value="{{address}}" required>
