--- a/views/tailor/tailoregister.handlebars
+++ b/views/tailor/tailoregister.handlebars
@@ -37,6 +37,7 @@
                     <input type="text" name="shopname" placeholder="Shop Name" value="{{shopname }}">
                   </div>
                   <div class="form-group">
+                    Shopfront photo:
                     <input type="file" id="file" name="file">
                   </div>
                   <div class="form-group">
