--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -80,7 +80,7 @@
                         <a class="account-satting-active" href="#">{{#ifCond user.photo '==' null}}<i class="pe-7s-user-female"></i>{{/ifCond}}{{#ifCond user.photo '!=' null}}<img src="/uploads/user/{{user.photo}}" alt="Profile Pic" width="25" height="25" style="border-radius: 50%;">{{/ifCond}}</a>
                         <div class="account-dropdown">
                             <ul>
-                                {{#if user}}
+                                {{#if (eq user.usertype "customer")}}
                                 <li>{{user.username}}</li>
                                 {{!-- user account problem --}}
                                 <li><a href="/customer/custaccount/{{user.id}}">Edit Profile</a></li>
