--- a/views/partials/_rnavbar.handlebars
+++ b/views/partials/_rnavbar.handlebars
@@ -87,7 +87,7 @@
                         <a class="account-satting-active" href="#">{{#ifCond user.photo '==' null}}<i class="pe-7s-user-female"></i>{{/ifCond}}{{#ifCond user.photo '!=' null}}<img src="/uploads/user/{{user.photo}}" alt="Profile Pic" width="25" height="25" style="border-radius: 50%;">{{/ifCond}}</a>
                         <div class="account-dropdown">
                             <ul>
-                                {{#if user}}
+                               {{#if (eq user.usertype "rider")}}
                                 <li>{{user.username}}</li>
                                 {{!-- user id problem --}}
                                 <li><a href="/rider/rideraccount/{{user.id}}">Edit Profile</a></li>
