--- a/views/rider/rideregister.handlebars
+++ b/views/rider/rideregister.handlebars
@@ -43,23 +43,34 @@
                     <input type="text" name="username" placeholder="User Name" value="{{ username }}">
                   </div>
                   <div class="form-group">
-<<<<<<< HEAD
+                    <label>Password (Password must contain at least eight characters with at least one uppercase letter,
+                      one lowercase letter, one number and one special character)</label>
+                    <input type="password" name="password" placeholder="Password" value="{{password }}" id="password">
+                    <input type="checkbox" onclick="showpassword()">Show Password
+                  </div>
+                  <div class="form-group">
+                    <label>Enter password again</label>
+                    <input type="password" name="password2" placeholder="Password" value="{{password2 }}">
+                  </div>
+                  <div class="form-group">
+                    <label>Profile photo:</label>
+                    <input type="file" id="file" name="file">
+                  </div>
+                  {{!-- <div class="form-group">
                     <label>Password (Password must contain at least eight characters with at least one uppercase letter,
                       one lowercase letter, one number and one special character)</label>
                     <input type="password" name="password" placeholder="Password" id="password" value="{{ password }}">
                     <input type="checkbox" onclick="showpassword()">Show Password
-=======
                     Profile photo:
                     <input type="file" id="file" name="file">
                   </div>
                   <div class="form-group">
                     <input type="text" name="password" placeholder="Password" value="{{ password }}">
->>>>>>> 2ae4dd6cce63c49ab84953dffffb7814ab6fd268
                   </div>
                   <div class="form-group">
                     <label>Enter password again</label>
                     <input type="password" name="password2" placeholder="Password" value="{{ password2 }}">
-                  </div>
+                  </div> --}}
                   <div class="form-group">
                     <label>Email</label>
                     <input type="text" name="email" placeholder="Email" value="{{ email }}">
