--- a/views/tailor/tailoregister.handlebars
+++ b/views/tailor/tailoregister.handlebars
@@ -43,11 +43,11 @@
                     <input type="text" name="shopname" placeholder="Shop Name" value="{{shopname }}">
                   </div>
                   <div class="form-group">
-                    <label>Address Line 1</label>
-                    Shopfront photo:
+                    <label>Shopfront photo:</label>
                     <input type="file" id="file" name="file">
                   </div>
                   <div class="form-group">
+                    <label>Address Line 1</label>
                     <input type="text" name="address1" placeholder="Address Line 1" value="{{address1 }}">
                   </div>
                   <div class="form-group">
