--- a/views/customer/viewshops.handlebars
+++ b/views/customer/viewshops.handlebars
@@ -29,13 +29,13 @@
                                 <div class="col-xl-6 col-md-6 col-lg-6 col-sm-6">
                                     <div class="product-wrap mb-25 scroll-zoom">
                                         <div class="product-img">
-                                            <a href="/viewshops/{{shopname}}">
+                                            <a href="/viewshops/{{shopname}}/1">
                                                 <img class="default-img" src="/uploads/user/{{photo}}" alt="">
                                             </a>
                                             <span class="pink">-30%</span>
                                             <div class="product-action">
                                                 <div class="pro-same-action pro-quickview" style="width:100%;">
-                                                    <a title="Shop here" href="/viewshops/{{shopname}}"><i class="fa fa-eye"></i> Shop here</a>
+                                                    <a title="Shop here" href="/viewshops/{{shopname}}/1"><i class="fa fa-eye"></i> Shop here</a>
                                                 </div>
                                             </div>
                                         </div>
