--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -43,7 +43,7 @@
 
                             <li><a href="/faq">Help </a></li>
                     {{else}}
-                    <center>Welcome to TailorNow, sign in to continue.</center>
+                    <li><a href="/tailor/tailorlogin">Welcome to TailorNow, sign in to continue.</a></li> 
                     {{/if}}
                     </ul>
                     </nav>
