--- a/views/customer/viewshops.handlebars
+++ b/views/customer/viewshops.handlebars
@@ -58,10 +58,11 @@
                     </div>
                     <div class="pro-pagination-style text-center mt-30">
                         <ul>
-                            <li><a class="prev" href="#"><i class="fa fa-angle-double-left"></i></a></li>
+                            <!--
+                            <li><a class="prev" href="#"><i class="fa fa-angle-double-left"></i></a></li>-->
                             <li><a class="active" href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a class="next" href="#"><i class="fa fa-angle-double-right"></i></a></li>
+                            <!--<li><a href="#">2</a></li>
+                            <li><a class="next" href="#"><i class="fa fa-angle-double-right"></i></a></li>-->
                         </ul>
                     </div>
                 </div>
