--- a/views/customer/productview.handlebars
+++ b/views/customer/productview.handlebars
@@ -11,7 +11,7 @@
                     <a href="/viewshops">View Shops</a>
                 </li>
                 <li>
-                    <a href="/viewshops/{{pdetails.storename}}">{{pdetails.storename}}</a>
+                    <a href="/viewshops/{{pdetails.storename}}/1">{{pdetails.storename}}</a>
                 </li>
                 <li class="active">{{ pdetails.name }}</li>
             </ul>
