--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -13,7 +13,7 @@
                     <nav>
                     <ul>
                     {{#if (eq user.usertype "tailor")}}
-                            <li><a href="/viewshops/{{user.shopname}}">View My Shop <i class="fa fa-angle-down"></i></a>
+                            <li><a href="/viewshops/{{user.shopname}}/1">View My Shop <i class="fa fa-angle-down"></i></a>
                             <ul class="submenu">
                                     <li><a href="/tailor/addproduct">Add Products</a></li>
                                     <li><a href="">Change Target</a></li>
